--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-gesture-handler": "^1.0.15",
+    "react-native-progress": "^3.6.0",
+    "react-native-side-menu": "^1.1.3",
+    "react-native-super-grid": "^3.0.3",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
