--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.4.0",
     "fetch-timeout": "0.0.2",
     "react": "16.6.3",
     "react-native": "0.58.3",
+    "react-native-background-timer": "^2.1.1",
     "react-native-firebase": "^5.3.1",
     "react-native-gesture-handler": "^1.0.15",
+    "react-native-image-picker": "^0.28.1",
+    "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-progress": "^3.6.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-super-grid": "^3.0.3",
