--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-image-picker": "^0.28.1",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-progress": "^3.6.0",
+    "react-native-radio-buttons-group": "^1.0.7",
     "react-native-side-menu": "^1.1.3",
     "react-native-super-grid": "^3.0.3",
     "react-native-vector-icons": "^6.4.2",
