--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fetch-timeout": "0.0.2",
     "react": "16.6.3",
     "react-native": "0.58.3",
+    "react-native-background-job": "^2.2.0",
     "react-native-background-timer": "^2.1.1",
     "react-native-firebase": "^5.3.1",
     "react-native-gesture-handler": "^1.0.15",
