--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-radio-buttons-group": "^1.0.7",
     "react-native-side-menu": "^1.1.3",
     "react-native-super-grid": "^3.0.3",
+    "react-native-swipe-gestures": "^1.0.3",
     "react-native-vector-icons": "^6.4.2",
     "react-native-wizard": "^1.0.1",
     "react-navigation": "^3.0.9"
