--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,16 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
+       <receiver android:name="io.invertase.firebase.notifications.RNFirebaseNotificationReceiver"/>
+  <receiver android:enabled="true" android:exported="true"  android:name="io.invertase.firebase.notifications.RNFirebaseNotificationsRebootReceiver">
+    <intent-filter>
+      <action android:name="android.intent.action.BOOT_COMPLETED"/>
+      <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
+      <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
+      <category android:name="android.intent.category.DEFAULT" />
+    </intent-filter>
+  </receiver>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -22,6 +32,9 @@
         android:windowSoftInputMode="adjustResize"
           android:launchMode="singleTop"
 >
+
+
+
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
@@ -34,6 +47,9 @@
       <action android:name="com.google.firebase.MESSAGING_EVENT" />
     </intent-filter>
   </service>
+
+    <!-- <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" /> -->
+
 
     <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" />
 
