--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'MedicApp'
+include ':react-native-universal-pedometer'
+project(':react-native-universal-pedometer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-universal-pedometer/android')
+include ':react-native-background-job'
+project(':react-native-background-job').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-background-job/android')
 // include ':react-native-background-job'
 // project(':react-native-background-job').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-background-job/android')
 include ':react-native-background-timer'
