--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-side-menu": "^1.1.3",
     "react-native-super-grid": "^3.0.3",
     "react-native-swipe-gestures": "^1.0.3",
+    "react-native-universal-pedometer": "smekalka/react-native-universal-pedometer",
     "react-native-vector-icons": "^6.4.2",
     "react-native-wizard": "^1.0.1",
     "react-navigation": "^3.0.9"
