--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,7 +74,7 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     entryFile: "index.js",
-            //  bundleInDebug: true
+       // bundleInDebug: true
 
 ]
 
@@ -136,20 +136,17 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-universal-pedometer')
-    implementation project(':react-native-background-job')
-    // implementation project(':react-native-background-job')
-    implementation project(':react-native-background-timer')
+    /*implementation project(':react-native-background-timer')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-firebase')
     implementation project(':react-native-vector-icons')
-    implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-gesture-handler')*/
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-     implementation project(':react-native-firebase')
+    //  implementation project(':react-native-firebase')
 
   // Firebase dependencies
   implementation "com.google.android.gms:play-services-base:16.1.0"
@@ -166,4 +163,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
-apply plugin: 'com.google.gms.google-services'
+// apply plugin: 'com.google.gms.google-services'
