--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "npx jetify"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.4.0",
+    "@react-native-community/async-storage": "^1.6.3",
     "fetch-timeout": "0.0.2",
     "react": "16.6.3",
     "react-native": "0.58.3",
@@ -22,7 +23,6 @@
     "react-native-side-menu": "^1.1.3",
     "react-native-super-grid": "^3.0.3",
     "react-native-swipe-gestures": "^1.0.3",
-    "react-native-universal-pedometer": "smekalka/react-native-universal-pedometer",
     "react-native-vector-icons": "^6.4.2",
     "react-native-wizard": "^1.0.1",
     "react-navigation": "^3.0.9"
@@ -31,6 +31,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.0.0",
     "jest": "24.0.0",
+    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3"
   },
